--- a/views/aboutMe.ejs
+++ b/views/aboutMe.ejs
@@ -4,7 +4,7 @@
 
 
 <body>
-    <header></header>
+    <%- include("./partials/header")%> 
     <main class="me">
         <div class="cami-jpg">
             <img src="/images/aboutme/Cami.jpeg" alt="">
