--- a/views/aboutMe.ejs
+++ b/views/aboutMe.ejs
@@ -4,7 +4,6 @@
 
 
 <body>
-    <%- include("./partials/header")%> 
     <main class="me">
         <div class="cami-jpg">
             <img src="/images/aboutme/Cami.jpeg" alt="">
@@ -27,5 +26,6 @@
             </div>
         </div>
     </main>
+    <%- include("./partials/footer")%> 
 </body>
 </html>
