--- a/views/aboutMe.ejs
+++ b/views/aboutMe.ejs
@@ -3,7 +3,7 @@
 <%- include("./partials/head")%> 
 
 
-<body>
+<body class="about-me">
     <main class="me">
         <div class="cami-jpg">
             <img src="/images/aboutme/Cami.jpeg" alt="">
