--- a/public/css/services.css
+++ b/public/css/services.css
@@ -1,14 +1,21 @@
+.servicios{
+    background-color: #fff8cd;
+    background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z' fill='%23ff9642' fill-opacity='0.17' fill-rule='evenodd'/%3E%3C/svg%3E");
+    display: flex;
+    flex-direction: column;
+}
+
 main .services{
-    max-height: 1000px ;
+    max-height: fit-content ;
     width:70vw;
     display: flex;
     flex-direction: column;
     border: 1px solid var(--color-gris);
     border-radius: 40px;
     padding: 30px;
-    margin: auto;
+    margin: 30px auto;
     transition: all ease 0.4s;
-    margin-top: 30px;
+    box-shadow: 1px 1px 0px 2px var(--color-gris);
 }
 
 main .services  section {
@@ -22,8 +29,4 @@ main .services  section h3{
 main .services  section ul li{
     margin-left: 3vw;
     margin-bottom: 15px
-}
-
-main .services:hover {
-    box-shadow: 1px 1px 0px 2px var(--color-gris);
 }
