--- a/views/services.ejs
+++ b/views/services.ejs
@@ -1,14 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
-    <title>Servicios</title>
-</head>
-<body>
-    <main>
+    <%- include("./partials/head")%> 
+<body class="servicios">
+    <main >
         <div class="services">
             <section class="trad">
                 <h3>Traducción, Corrección y Redacción</h3>
@@ -37,5 +31,6 @@
             </section>
         </div>
     </main>
+    <%- include("./partials/footer")%> 
 </body>
 </html>
