--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,4 +26,7 @@
           </div>
         </div>
       </nav>
+      <div class="barrita">
+        <a href="#"><img src="/images/burgerimg.png" alt=""></a>
+      </div>
 </header>
