--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,5 +1,146 @@
-.home{
+.home {
     background-color: var(--color-amarillo-claro);
     background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z' fill='%23ff9642' fill-opacity='0.17' fill-rule='evenodd'/%3E%3C/svg%3E");
+    height: 152vh;
+}
 
+.home a {
+    color: black;
+    transition: 0.6s;
+}
+
+.home a:hover {
+    text-decoration: underline;
+    color: white;
+}
+
+.home .containercarrusel {
+    display: none;
+    position: relative;
+}
+
+.home .filtrocarru {
+    position: absolute;
+    background-color: rgba(255, 248, 205, 0.5);
+    width: 100%;
+    top: 3vw;
+    height: 48vh;
+}
+
+.home .carrusel {
+    margin-top: 5vh;
+}
+
+/* primer texto y foto de sachi */
+
+.home .sachi-container {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    height: 57vh;
+    margin: 0 auto;
+    margin-top: 5vh;
+    background-color: var(--color-amarillo-fuerte);
+    justify-content: space-around;
+}
+
+.home .sachi-container p {
+    text-align: center;
+    font-size: 4vw;
+    width: 60%;
+    margin-left: 0 auto;
+    margin: 0 auto;
+}
+
+.home .sachi-container img {
+    width: 70%;
+    height: 35vh;
+    border: solid 5px var(--color-amarillo-claro);
+    margin: 0 auto;
+}
+
+/* Don genco */
+
+.don-genco-container {
+    display: flex;
+    flex-direction: column-reverse;
+    width: 90%;
+    height: 70vh;
+    margin: 0 auto;
+    margin-top: 5vh;
+    background-color: var(--color-amarillo-fuerte);
+    justify-content: space-around;
+}
+
+.don-genco-container p {
+    text-align: center;
+    font-size: 4vw;
+    width: 60%;
+    margin-left: 0 auto;
+    margin: 0 auto;
+}
+
+.don-genco-container img {
+    width: 70%;
+    height: 35vh;
+    border: solid 5px var(--color-amarillo-claro);
+    margin: 0 auto;
+}
+
+@media (min-width:768px) {
+    .home .sachi-container {
+        width: 70%;
+    }
+    .home .sachi-container p {
+        font-size: 2.5vw;
+    }
+    .home .sachi-container img {
+        width: 60%;
+        height: 30vh;
+    }
+    .home .don-genco-container {
+        width: 70%;
+    }
+    .home .don-genco-container p {
+        font-size: 2.5vw;
+    }
+    .home .don-genco-container img {
+        width: 60%;
+        height: 30vh;
+    }
+}
+
+@media (min-width:1024px) {
+    .home {
+        height: 165vh;
+    }
+    .home .sachi-container {
+        flex-direction: row;
+        width: 90%;
+        align-items: center;
+    }
+    .home .sachi-container p {
+        font-weight: bold;
+        font-size: 2vw;
+    }
+    .home .sachi-container img {
+        border: none;
+        width: 30%;
+        height: 45vh;
+    }
+    /* Don genco */
+    .home .don-genco-container {
+        flex-direction: row;
+        width: 90%;
+        align-items: center;
+    }
+    .home .don-genco-container p {
+        font-weight: bold;
+        font-size: 2vw;
+    }
+    .home .don-genco-container img {
+        border: none;
+        width: 30%;
+        height: 45vh;
+    }
 }
