--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<%- include("./partials/head")  %> 
-<body class="home">
-<%- include("./partials/header")  %> 
+<%- include("./partials/head") %>
 
+    <body class="home">
+        <%- include("./partials/header") %>
 
-</body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+            <main>
+                <div class="containercarrusel">
+                    <img class="carrusel" src="/images/carruselprovisional.png" alt="">
+                    <div class="filtrocarru"></div>
+                </div>
+                <section>
+                    <article class="sachi-container">
+                        <p>Este es Sacha, mi perrito! Es un salchicha mini peludo que le encanta jugar (y tener
+                            relaciones raras con almohadas).
+                            Es muy importante para mi, siempre esta para mí y me llena el corazón.</p>
+                        <img class="sachi" src="/images/elperropajero.jpeg" alt="">
+                    </article>
+
+                    <article class="don-genco-container">
+                        <img src="/images/dongenco.jpeg" alt="">
+                        <p>Hola de nuevo! Con mi familia empezamos un emprendimiento de alfajores artesanales en
+                            instagram!
+                            Nos ayudarían muchísimo con un follow, somos <a href="https://www.instagram.com/don.genco/">@don.genco!</a> (clickea en nuestro nombre y vas a ir a nuestro perfil!)</p>
+
+                    </article>
+                </section>
+            </main>
+    </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
 </html>
