agregando enlaces al header

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,16 +10,16 @@
                 <a class="nav-link active" id="nav-link" aria-current="page" href="#">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
+                <a class="nav-link" href="/contact">Contacto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Servicios</a>
+                <a class="nav-link" href="/services">Servicios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Sobre mi</a>
+                <a class="nav-link" href="/aboutMe">Sobre mi</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">meme xd</a>
+                <a class="nav-link" href="/meme">meme xd</a>
               </li>
               
             </ul>
