agregando header a vistas servicios y about

--- a/views/aboutMe.ejs
+++ b/views/aboutMe.ejs
@@ -4,6 +4,7 @@
 
 
 <body class="about-me">
+    <%- include("./partials/header")%> 
     <main class="me">
         <div class="cami-jpg">
             <img src="/images/aboutme/Cami.jpeg" alt="">
