--- a/views/services.ejs
+++ b/views/services.ejs
@@ -3,6 +3,7 @@
     <%- include("./partials/head")%> 
 <body class="servicios">
     <main >
+        <%- include("./partials/header")%> 
         <div class="services">
             <section class="trad">
                 <h3>Traducción, Corrección y Redacción</h3>
