--- a/views/services.ejs
+++ b/views/services.ejs
@@ -2,8 +2,10 @@
 <html lang="en">
     <%- include("./partials/head")%> 
 <body class="servicios">
+    <%- include("./partials/header")%> 
     <main >
         <div class="services">
+            
             <section class="trad">
                 <h3>Traducción, Corrección y Redacción</h3>
                 <br>
