--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-justify-center">
               <li class="nav-item">
-                <a class="nav-link active" id="nav-link" aria-current="page" href="#">Inicio</a>
+                <a class="nav-link active" id="nav-link" aria-current="page" href="/">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/contact">Contacto</a>
@@ -27,6 +27,6 @@
         </div>
       </nav>
       <div class="barrita">
-        <a href="#"><img src="/images/burgerimg.png" alt=""></a>
+        <a href="/"><img src="/images/burgerimg.png" alt=""></a>
       </div>
 </header>
