--- a/views/services.ejs
+++ b/views/services.ejs
@@ -4,7 +4,6 @@
 <body class="servicios">
     <%- include("./partials/header")%> 
     <main >
-        <%- include("./partials/header")%> 
         <div class="services">
             
             <section class="trad">
@@ -34,6 +33,7 @@
             </section>
         </div>
     </main>
-    <%- include("./partials/footer")%> 
+    <%- include("./partials/footer")%>
+    <%- include("./partials/scripts")%> 
 </body>
 </html>
