--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,6 +10,12 @@
                 <div class="containercarrusel">
                     <img class="carrusel" src="/images/carruselprovisional.png" alt="">
                     <div class="filtrocarru"></div>
+                    <p>Hola soy Cami y este es mi blog!</p>
+                </div>
+                <div class="img-mobile-tablet">
+                    <img src="/images/WhatsApp Image 2021-07-12 at 17.00.20 (1).jpeg" alt="">
+                    <div class="filltro-img-mobile"></div>
+                    <p>Hola soy Cami y este es mi blog!</p>
                 </div>
                 <section>
                     <article class="sachi-container">
