--- a/views/aboutMe.ejs
+++ b/views/aboutMe.ejs
@@ -15,7 +15,10 @@
                 <br>
                 <h5>Traductora en construcción</h5>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et tortor consequat id porta nibh venenatis cras. At erat pellentesque adipiscing commodo. Consectetur a erat nam at lectus urna duis convallis convallis. Sit amet porttitor eget dolor. </p>
+            <p>Hola! Soy Camila Genco, tengo 20 años y actualmente estoy cursando el segundo año del traductorado en ingles. 
+                En mis tiempos libres me gusta leer, ver series  jugar con mi perro.
+                Apunto a ser una traductora literaria para buscar en el mundo de inglés un espacio cómodo y tranquilo donde desarrollarme.
+                Cualquier cosa que necesites contactame por mis redes!</p>
             <div class="education">
                 <h4>Educación</h4>
                 <p>Instituto en Lenguas Vivas Juan Ramón Fernández</p>
