--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -84,5 +84,16 @@
         height: 90%;
         margin-top: 3vh;
     }
-        
+    .contact input:focus,
+    .contact textarea:focus,
+    .contact form .input-text-container input:focus {
+        background-color: white;
+        outline: none;
+        box-shadow: 10px 5px 5px #FFE05D;
+    }
+    .contact button:active{
+        background-color: var(--color-amarillo-claro);
+        border: solid .5px var(--color-amarillo-fuerte);
+        box-shadow: 10px 5px 5px #FFE05D;
+    }
 }
